Corrected overflow.

--- a/sass/_ui.scss
+++ b/sass/_ui.scss
@@ -1,6 +1,6 @@
 
 html {
-  vertical-align: scroll;
+  overflow-y: scroll;
 }
 
 textarea {
